chord drawing correctly except for spacing and labels

--- a/src/components/chart/D3Chord/d3chord.module.scss
+++ b/src/components/chart/D3Chord/d3chord.module.scss
@@ -2,7 +2,15 @@
 .region,
 .subregion,
 .entity {
-  stroke: red;
+  stroke: white;
   stroke-width: 2px;
-  fill: green;
+  fill: auto;
+}
+.flows {
+  path {
+    fill: rgb(5, 48, 97);
+    fill-opacity: 0.3;
+    stroke: none;
+    // stroke-width: 1px;
+  }
 }
