--- a/src/components/views/analysis/content/chord.module.scss
+++ b/src/components/views/analysis/content/chord.module.scss
@@ -2,7 +2,7 @@
 .chord {
   .chordChart {
     display: flex;
-    width: 440px;
-    height: 440px;
+    width: 700px;
+    height: 700px;
   }
 }
